--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body onload="Start();">
     <canvas class="canvas" id="canvas"></canvas>
+    <div class="containerText">
+        <p id="textMessage">busca la llave</p>
+    </div>
     <script src="./juego.js"></script>
 </body>
 </html>
